--- a/pages/19960.html
+++ b/pages/19960.html
@@ -946,7 +946,7 @@ margin-left: 0em;
 <p>graphics grabbed from <a href="#Rebhan14">Rebhan 14</a></p>
 </blockquote>
 
-<p>The further introduction of <a class="existingWikiWord" href="/nlab/show/intersecting+D-brane+model">intersecting</a> [D8-branes]] and <a class="existingWikiWord" href="/nlab/show/anti+D-brane">anti</a> <a class="existingWikiWord" href="/nlab/show/D8-branes">D8-branes</a> makes a sensible sector of <a class="existingWikiWord" href="/nlab/show/chiral+fermions">chiral fermions</a> appear in this model (<a href="#SakaiSugimoto04">Sakai-Sugimoto 04</a>, <a href="#SakaiSugimoto05">Sakai-Sugimoto 05</a>)</p>
+<p>The further introduction of <a class="existingWikiWord" href="/nlab/show/intersecting+D-brane+model">intersecting</a> <a class="existingWikiWord" href="/nlab/show/D8-branes">D8-branes</a> and <a class="existingWikiWord" href="/nlab/show/anti+D-brane">anti</a> <a class="existingWikiWord" href="/nlab/show/D8-branes">D8-branes</a> makes a sensible sector of <a class="existingWikiWord" href="/nlab/show/chiral+fermions">chiral fermions</a> appear in this model (<a href="#SakaiSugimoto04">Sakai-Sugimoto 04</a>, <a href="#SakaiSugimoto05">Sakai-Sugimoto 05</a>)</p>
 <center>
 <img src="https://ncatlab.org/nlab/files/SakaiSugimotoModel.jpg" width="600" />
 </center>
@@ -1289,14 +1289,14 @@ margin-left: 0em;
 
 <div class="revisedby">
   <p>
-  Last revised on December  1, 2018 at 08:08:13.
+  Last revised on December  2, 2018 at 03:48:43.
   See the <a href="https://ncatlab.org/nlab/history/AdS-QCD correspondence" style="color: #005c19">history</a> of this page for a list of all contributions to it.
   </p>
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/AdS-QCD+correspondence" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/AdS-QCD+correspondence/8" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(8 revisions)</span> | <a href="/nlab/show/diff/AdS-QCD+correspondence" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/AdS-QCD+correspondence" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/AdS-QCD+correspondence" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/AdS-QCD+correspondence/9" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(9 revisions)</span> | <a href="/nlab/show/diff/AdS-QCD+correspondence" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/AdS-QCD+correspondence" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   | <a href="https://ncatlab.org/nlab/show/AdS-QCD correspondence/cite" style="color: black">Cite</a>
   <span class="views">
     | Views:
