--- a/pages/9178.html
+++ b/pages/9178.html
@@ -457,7 +457,7 @@ margin-left: 0em;
 
 <h2 id="idea">Idea</h2>
 
-<p>The <em>quarkss</em> are one of the fundamental <a class="existingWikiWord" href="/nlab/show/particles">particles</a>/<a class="existingWikiWord" href="/nlab/show/matter">matter</a> <a class="existingWikiWord" href="/nlab/show/field+%28physics%29">fields</a> in the <a class="existingWikiWord" href="/nlab/show/standard+model+of+particle+physics">standard model of particle physics</a>. Quarks couple to the <a class="existingWikiWord" href="/nlab/show/Yang-Mills+theory">Yang-Mills theory</a> given by <a class="existingWikiWord" href="/nlab/show/QCD">QCD</a>.</p>
+<p><em>Quarks</em> are one of the fundamental <a class="existingWikiWord" href="/nlab/show/particles">particles</a>/<a class="existingWikiWord" href="/nlab/show/matter">matter</a> <a class="existingWikiWord" href="/nlab/show/field+%28physics%29">fields</a> in the <a class="existingWikiWord" href="/nlab/show/standard+model+of+particle+physics">standard model of particle physics</a>. Quarks couple to the <a class="existingWikiWord" href="/nlab/show/Yang-Mills+theory">Yang-Mills theory</a> given by <a class="existingWikiWord" href="/nlab/show/QCD">QCD</a>.</p>
 
 <p>At room-<a class="existingWikiWord" href="/nlab/show/temperature">temperature</a> quarks always form <a class="existingWikiWord" href="/nlab/show/bound+states">bound states</a> to <a class="existingWikiWord" href="/nlab/show/hadrons">hadrons</a>. This phenomenon of <em><a class="existingWikiWord" href="/nlab/show/confinement">confinement</a></em> is quantitatively well-reproduced by <a class="existingWikiWord" href="/nlab/show/lattice+QCD">lattice QCD</a> computations (see <a href="#FodorHoelbling12">Fodor-Hoelbling 12</a>) and qualitatively well reproduced by conceptual arguments such as the <a class="existingWikiWord" href="/nlab/show/AdS%2FQCD+correspondence">AdS/QCD correspondence</a>, but a full analytic <a class="existingWikiWord" href="/nlab/show/proof">proof</a> of confinement from a rigorous <a class="existingWikiWord" href="/nlab/show/AQFT">AQFT</a>-like foundation of <a class="existingWikiWord" href="/nlab/show/QCD">QCD</a> remains open, see the <em><a class="existingWikiWord" href="/nlab/show/mass+gap+problem">mass gap problem</a></em>.</p>
 
@@ -522,14 +522,14 @@ margin-left: 0em;
 
 <div class="revisedby">
   <p>
-  Last revised on December  2, 2018 at 02:39:46.
+  Last revised on December  2, 2018 at 03:32:22.
   See the <a href="https://ncatlab.org/nlab/history/quark" style="color: #005c19">history</a> of this page for a list of all contributions to it.
   </p>
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/quark" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/quark/7" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(7 revisions)</span> | <a href="/nlab/show/diff/quark" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/quark" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/quark" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/quark/8" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(8 revisions)</span> | <a href="/nlab/show/diff/quark" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/quark" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   | <a href="https://ncatlab.org/nlab/show/quark/cite" style="color: black">Cite</a>
   <span class="views">
     | Views:
