--- a/pages/19719.html
+++ b/pages/19719.html
@@ -294,7 +294,7 @@ margin-left: 0em;
     <a href="/nlab/show/HomePage" accesskey="H" title="Home page">Home Page</a> |
     <a href="/nlab/all_pages" accesskey="A" title="List of all pages">All Pages</a> |
     <a href="/nlab/latest_revisions" accesskey="U" title="Latest edits and page creations">Latest Revisions</a> |
-    <a href="https://nforum.ncatlab.org/discussion/9044/#Item_46" title="Discuss this page in its dedicated thread on the nForum" style="color: black">Discuss this page</a> |
+    <a href="https://nforum.ncatlab.org/discussion/9044/#Item_48" title="Discuss this page in its dedicated thread on the nForum" style="color: black">Discuss this page</a> |
     <a href="/nlab/feeds" title="Subscribe to changes by Atom">Feeds</a> |
 <form accept-charset="utf-8" action="/nlab/search" id="navigationSearchForm" method="get">      <fieldset class="search"><input type="text" id="searchField" name="query" value="Search"
              onfocus="this.value == 'Search' ? this.value = '' : true"
@@ -334,13 +334,13 @@ margin-left: 0em;
 <ul>
 <li><a class="existingWikiWord" href="/nlab/show/Initiality+Project+-+Overview">Overview</a>– currently a proposal, under discussion.</li>
 
-<li><a class="existingWikiWord" href="/nlab/show/Initiality+Project+-+Raw+Syntax">Raw Syntax</a></li>
+<li><a class="existingWikiWord" href="/nlab/show/Initiality+Project+-+Raw+Syntax">Raw Syntax</a>– Formally putting symbols together in a careful and well-defined way.</li>
 
-<li><a class="existingWikiWord" href="/nlab/show/Initiality+Project+-+Type+Theory">Type Theory</a>– the judgments of our type theory</li>
+<li><a class="existingWikiWord" href="/nlab/show/Initiality+Project+-+Type+Theory">Type Theory</a>– The “type theory”, with rules on how to manipulate raw syntax. The usual notion of judgements with natural deduction.</li>
 
-<li><a class="existingWikiWord" href="/nlab/show/Initiality+Project+-+Semantics">Semantics</a>– the categorical structures in which we interpret type theory</li>
+<li><a class="existingWikiWord" href="/nlab/show/Initiality+Project+-+Semantics">Semantics</a>– Categorical structures used to model our type theory</li>
 
-<li><a class="existingWikiWord" href="/nlab/show/Initiality+Project+-+Partial+Interpretation">Partial interpretation function</a></li>
+<li><a class="existingWikiWord" href="/nlab/show/Initiality+Project+-+Partial+Interpretation">Partial interpretation function</a>– How to arrive at the categorical model from our type theory</li>
 
 <li><a class="existingWikiWord" href="/nlab/show/Initiality+Project+-+Substitution">Preservation of Substitution</a></li>
 
@@ -456,14 +456,14 @@ margin-left: 0em;
 
 <div class="revisedby">
   <p>
-  Last revised on November 29, 2018 at 05:00:09.
+  Last revised on December  2, 2018 at 11:07:23.
   See the <a href="https://ncatlab.org/nlab/history/Initiality Project" style="color: #005c19">history</a> of this page for a list of all contributions to it.
   </p>
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/Initiality+Project" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/Initiality+Project/43" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(43 revisions)</span> | <a href="/nlab/show/diff/Initiality+Project" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/Initiality+Project" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/Initiality+Project" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/Initiality+Project/44" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(44 revisions)</span> | <a href="/nlab/show/diff/Initiality+Project" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/Initiality+Project" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   | <a href="https://ncatlab.org/nlab/show/Initiality Project/cite" style="color: black">Cite</a>
   <span class="views">
     | Views:
