--- a/pages/6322.html
+++ b/pages/6322.html
@@ -1348,6 +1348,11 @@ margin-left: 0em;
 <li><a href='#properties'>Properties</a></li>
 <li><a href='#related_concepts'>Related concepts</a></li>
 <li><a href='#references'>References</a></li>
+<ul>
+<li><a href='#general'>General</a></li>
+<li><a href='#history'>History</a></li>
+<li><a href='#lattice_qcd_checks'>Lattice QCD checks</a></li>
+</ul>
 </ul>
 </div>
 
@@ -1435,6 +1440,8 @@ margin-left: 0em;
 
 <h2 id="references">References</h2>
 
+<h3 id="general">General</h3>
+
 <p>Introductions include</p>
 
 <ul>
@@ -1449,6 +1456,12 @@ margin-left: 0em;
 <li>
 <p>Particle Data Group, <em>Quantum Chromodynamics</em> (<a href="http://pdg.lbl.gov/2015/reviews/rpp2015-rev-qcd.pdf">pdf</a>)</p>
 </li>
+</ul>
+
+<p>Textbook account with <a class="existingWikiWord" href="/nlab/show/phenomenology">phenomenological</a> emphasis:</p>
+
+<ul>
+<li id="HalzenMartin84"><a class="existingWikiWord" href="/nlab/show/Francis+Halzen">Francis Halzen</a>, <a class="existingWikiWord" href="/nlab/show/Alan+Martin">Alan Martin</a>, <em>Quarks and Leptons: An Introductory Course in Modern Particle Physics</em>, Wiley 1984 (<a href="http://ajbell.web.cern.ch/ajbell/Documents/eBooks/Quarks%20&amp;%20Leptons.pdf">pdf</a>)</li>
 </ul>
 
 <p>Rigorous construction as a <a class="existingWikiWord" href="/nlab/show/perturbative+quantum+field+theory">perturbative quantum field theory</a> via <a class="existingWikiWord" href="/nlab/show/causal+perturbation+theory">causal perturbation theory</a> is discussed in</p>
@@ -1468,20 +1481,58 @@ margin-left: 0em;
 <ul>
 <li>Bo-Lun Du, Xing-Gang Wu, Jian-Ming Shen, Stanley J. Brodsky, <em>Extending the Predictive Power of Perturbative QCD</em> (<a href="https://arxiv.org/abs/1807.11144">arXiv:1807.11144</a>)</li>
 </ul>
+
+<h3 id="history">History</h3>
+
+<ul>
+<li><a class="existingWikiWord" href="/nlab/show/George+Zweig">George Zweig</a>, <em>Origins of the quark model</em>, 1980 (<a href="https://authors.library.caltech.edu/18969/1/Origins_of_the_Quark_Model_Final_Zweig%5B1%5D.pdf">pdf</a>, <a class="existingWikiWord" href="/nlab/files/ZweigQuarkModel1980.pdf" title="pdf">pdf</a>)</li>
+</ul>
+
+<h3 id="lattice_qcd_checks">Lattice QCD checks</h3>
+
+<p>Due to <em><a class="existingWikiWord" href="/nlab/show/confinement">confinement</a></em>, the fundamental degrees of freedom in terms of which QCD is formulated, namely the <a class="existingWikiWord" href="/nlab/show/quarks">quarks</a>, are actually not the low-energy <a class="existingWikiWord" href="/nlab/show/bound+states">bound states</a> of the theory, which instead are the <a class="existingWikiWord" href="/nlab/show/hadrons">hadrons</a>. This leaves room to speculate that QCD is not really the fundamental theory of the <a class="existingWikiWord" href="/nlab/show/strong+nuclear+force">strong nuclear force</a>.</p>
+
+<p>However, brute-force computation in <a class="existingWikiWord" href="/nlab/show/lattice+QCD">lattice QCD</a> shows that the <a class="existingWikiWord" href="/nlab/show/quark">quark</a>-model does reproduce these <a class="existingWikiWord" href="/nlab/show/hadron">hadron</a> <a class="existingWikiWord" href="/nlab/show/bound+states">bound states</a> <em>somehow</em> (even if the real understanding of how it does so remains open, this is the <em><a class="existingWikiWord" href="/nlab/show/mass+gap+problem">mass gap problem</a></em>):</p>
+
+<ul>
+<li>
+<p>S. Durr, Z. Fodor, J. Frison, C. Hoelbling, R. Hoffmann, S.D. Katz, S. Krieg, T. Kurth, L. Lellouch, T. Lippert, K.K. Szabo, G. Vulvert,</p>
+
+<p><em>Ab-initio Determination of Light Hadron Masses</em>,</p>
+
+<p>Science 322:1224-1227,2008 (<a href="https://arxiv.org/abs/0906.3599">arXiv:0906.3599</a>)</p>
+
+<p>conclusion on p. 4:</p>
+</li>
+</ul>
+
+<blockquote>
+<p>our study strongly suggests that <a class="existingWikiWord" href="/nlab/show/QCD">QCD</a> is the theory of the <a class="existingWikiWord" href="/nlab/show/strong+nuclear+force">strong interaction</a>, at low energies as well</p>
+</blockquote>
+
+<ul>
+<li id="FodorHoelbling12">
+<p>Zoltan Fodor, Christian Hoelbling, <em>Light Hadron Masses from Lattice QCD</em>, Rev. Mod. Phys. 84, 449, (<a href="https://arxiv.org/abs/1203.4789">arXiv:1203.4789</a>)</p>
+</li>
+
+<li>
+<p>S. Aoki et. al. <em>Review of lattice results concerning low-energy particle physics</em> (<a href="https://arxiv.org/abs/1607.00299">arXiv:1607.00299</a>)</p>
+</li>
+</ul>
 </body></html>
 
 </div>
 
 <div class="revisedby">
   <p>
-  Last revised on November 27, 2018 at 02:10:32.
+  Last revised on December  2, 2018 at 12:53:35.
   See the <a href="https://ncatlab.org/nlab/history/QCD" style="color: #005c19">history</a> of this page for a list of all contributions to it.
   </p>
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/QCD" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/QCD/18" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(18 revisions)</span> | <a href="/nlab/show/diff/QCD" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/QCD" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/QCD" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/QCD/19" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(19 revisions)</span> | <a href="/nlab/show/diff/QCD" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/QCD" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   | <a href="https://ncatlab.org/nlab/show/QCD/cite" style="color: black">Cite</a>
   <span class="views">
     | Views:
