--- a/pages/9178.html
+++ b/pages/9178.html
@@ -294,7 +294,7 @@ margin-left: 0em;
     <a href="/nlab/show/HomePage" accesskey="H" title="Home page">Home Page</a> |
     <a href="/nlab/all_pages" accesskey="A" title="List of all pages">All Pages</a> |
     <a href="/nlab/latest_revisions" accesskey="U" title="Latest edits and page creations">Latest Revisions</a> |
-    <a href="https://nforum.ncatlab.org/discussion/9332/#Item_1" title="Discuss this page in its dedicated thread on the nForum" style="color: black">Discuss this page</a> |
+    <a href="https://nforum.ncatlab.org/discussion/9332/#Item_2" title="Discuss this page in its dedicated thread on the nForum" style="color: black">Discuss this page</a> |
     <a href="/nlab/feeds" title="Subscribe to changes by Atom">Feeds</a> |
 <form accept-charset="utf-8" action="/nlab/search" id="navigationSearchForm" method="get">      <fieldset class="search"><input type="text" id="searchField" name="query" value="Search"
              onfocus="this.value == 'Search' ? this.value = '' : true"
@@ -450,6 +450,8 @@ margin-left: 0em;
 <li><a href='#related_concepts'>Related concepts</a></li>
 <li><a href='#references'>References</a></li>
 <ul>
+<li><a href='#general'>General</a></li>
+<li><a href='#history'>History</a></li>
 <li><a href='#ReferencesAbInitioLatticeComputation'>Ab-initio lattice computation</a></li>
 </ul>
 </ul>
@@ -489,6 +491,24 @@ margin-left: 0em;
 
 <h2 id="references">References</h2>
 
+<h3 id="general">General</h3>
+
+<ul>
+<li>Jean-Marc Richard, <em>An introduction to the quark model</em> (<a href="https://arxiv.org/abs/1205.4326">arXiv:1205.4326</a>)</li>
+</ul>
+
+<p>Textbooks:</p>
+
+<ul>
+<li id="HalzenMartin84"><a class="existingWikiWord" href="/nlab/show/Francis+Halzen">Francis Halzen</a>, <a class="existingWikiWord" href="/nlab/show/Alan+Martin">Alan Martin</a>, <em>Quarks and Leptons: An Introductory Course in Modern Particle Physics</em>, Wiley 1984 (<a href="http://ajbell.web.cern.ch/ajbell/Documents/eBooks/Quarks%20&amp;%20Leptons.pdf">pdf</a>)</li>
+</ul>
+
+<h3 id="history">History</h3>
+
+<ul>
+<li><a class="existingWikiWord" href="/nlab/show/George+Zweig">George Zweig</a>, <em>Origins of the quark model</em>, 1980 (<a href="https://authors.library.caltech.edu/18969/1/Origins_of_the_Quark_Model_Final_Zweig%5B1%5D.pdf">pdf</a>, <a class="existingWikiWord" href="/nlab/files/ZweigQuarkModel1980.pdf" title="pdf">pdf</a>)</li>
+</ul>
+
 <h3 id="ReferencesAbInitioLatticeComputation">Ab-initio lattice computation</h3>
 
 <p>Due to <a class="existingWikiWord" href="/nlab/show/confinement">confinement</a>, before the <a class="existingWikiWord" href="/nlab/show/quark-gluon+plasma">quark-gluon plasma</a> was seen in <a class="existingWikiWord" href="/nlab/show/experiment">experiment</a> it was a logical possibility that the quark-model of <a class="existingWikiWord" href="/nlab/show/QCD">QCD</a> is not actually correct. But more recend ab-initio computation in <a class="existingWikiWord" href="/nlab/show/lattice+QCD">lattice QCD</a> show that starting with the quark model, at least the light <a class="existingWikiWord" href="/nlab/show/hadron">hadron</a> <a class="existingWikiWord" href="/nlab/show/bound+states">bound states</a> observes in <a class="existingWikiWord" href="/nlab/show/experiment">experiment</a> are reproduced by these ab-initio computations. This is discussed in the following references, see the good review <a href="#FodorHoelbling12">Fodor-Hoelbling 12</a></p>
@@ -522,14 +542,14 @@ margin-left: 0em;
 
 <div class="revisedby">
   <p>
-  Last revised on December  2, 2018 at 03:32:22.
+  Last revised on December  2, 2018 at 12:48:43.
   See the <a href="https://ncatlab.org/nlab/history/quark" style="color: #005c19">history</a> of this page for a list of all contributions to it.
   </p>
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/quark" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/quark/8" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(8 revisions)</span> | <a href="/nlab/show/diff/quark" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/quark" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/quark" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/quark/9" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(9 revisions)</span> | <a href="/nlab/show/diff/quark" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/quark" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   | <a href="https://ncatlab.org/nlab/show/quark/cite" style="color: black">Cite</a>
   <span class="views">
     | Views:
